--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "antd": "^5.24.3",
     "axios": "^1.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-signature-canvas": "^1.1.0-alpha.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
